Added updating, deleting services for entity user and order for admin permission Updated tests for service, DAO layers